--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -112,7 +108,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>9 June 1994</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ajithes.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8943836357</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cochin, Kerala</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kattappana, Kerala, India</span>
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -287,9 +284,10 @@
                 interfaces and continuously enhancing my skill set to stay ahead in the ever-evolving tech
                 landscape.</em></p>
               <ul>
-                <li>Edakkothuparambil House, Kerala, India</li>
                 <li>+91 8943836357</li>
                 <li>ajithes1@gmail.com</li>
+                <li><i class="bi bi-linkedin"></i><a target="_blank" href="https://www.linkedin.com/in/ajithes1/">
+                    https://www.linkedin.com/in/ajithes1</a></li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -388,8 +386,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-phone"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Cross-Platform Mobile
-                  Solutions</a></h4>
+              <h4 class="title">Cross-Platform Mobile
+                Solutions</h4>
               <p class="description">I create cross-platform mobile apps for both Android and iOS using React Native. My
                 apps are smooth, reliable, and optimized for performance, with features like push notifications, deep
                 linking, and native integrations.</p>
@@ -399,7 +397,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-palette"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Design-to-Code Implementation</a>
+              <h4 class="title">Design-to-Code Implementation
               </h4>
               <p class="description">I convert Figma, Sketch, or Adobe XD designs into responsive and interactive user
                 interfaces. I make sure the final product matches the design perfectly and works well across all
@@ -410,8 +408,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-diagram-3"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Scalable Frontend Architecture &
-                  State Management</a></h4>
+              <h4 class="title">Scalable Frontend Architecture &
+                State Management</h4>
               <p class="description">I set up structured, maintainable frontend code using tools like Redux or Zustand.
                 This helps teams work better together and makes apps easier to scale in the future.</p>
             </div>
@@ -420,8 +418,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-people"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Technical Leadership & Client
-                  Collaboration</a></h4>
+              <h4 class="title">Technical Leadership & Client
+                Collaboration</h4>
               <p class="description">As a tech lead, I manage projects end-to-end—handling planning, coordination, and
                 communication with clients and teams to ensure everything stays on track.</p>
             </div>
@@ -430,8 +428,8 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-speedometer2"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Performance Optimization & Code
-                  Refactoring</a></h4>
+              <h4 class="title">Performance Optimization & Code
+                Refactoring</h4>
               <p class="description">I optimize existing apps by finding and fixing performance issues, cleaning up
                 messy code, and improving speed and responsiveness for a better user experience.</p>
             </div>
@@ -507,8 +505,8 @@
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Rahim Badsha</h3>
+                <h4>Senior Project Manager</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -516,43 +514,16 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis
-                    minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum
+                    velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Rakesh V Gopi</h3>
+                <h4>Founder, CEO</h4>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim
-                    duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt
-                    culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-              </div>
-            </div><!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
@@ -582,36 +553,36 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Kattappana, Kerala, India</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Phone</h3>
+                  <p>+91 8943836357</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <h3>Email</h3>
+                  <p>ajithes1@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44486.822115726114!2d77.05850126010138!3d9.756181632711284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07a95aa8e26bf9%3A0x67c8632ff6aeefb5!2sKattappana%2C%20Kerala!5e0!3m2!1sen!2sin!4v1743944125378!5m2!1sen!2sin"
                 frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
-              data-aos-delay="200">
+            <form action="https://formsubmit.co/ajithes1@gmail.com" method="POST" class="php-email-form"
+              data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -653,25 +624,6 @@
     </section><!-- /Contact Section -->
 
   </main>
-
-  <footer id="footer" class="footer position-relative light-background">
-
-    <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span>
-        </p>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-          href="https://themewagon.com">ThemeWagon</a>
-      </div>
-    </div>
-
-  </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
