--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>AJITH E S</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
+  <link rel="icon" href="assets/img/favicon.png" type="image/png" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -42,11 +42,9 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="https://x.com/ajithes100" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/ajith__e_s_" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://github.com/ajithes1" class="google-plus"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/ajithes1/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -54,7 +52,6 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
@@ -106,7 +103,9 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>9 June 1994</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.ajithes.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                    <span><a href="https://ajithes1.github.io/portfolio">https://ajithes1.github.io/portfolio</a></span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8943836357</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kattappana, Kerala, India</span>
                   </li>
@@ -500,22 +499,11 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum
-                    velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Rahim Badsha</h3>
-                <h4>Senior Project Manager</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum
-                    velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>I had the pleasure of working with Ajith, a highly capable and versatile developer with solid
+                    expertise in both web and mobile app development. He consistently delivered high-quality solutions,
+                    whether building responsive web interfaces or crafting smooth mobile experiences. Ajith is a
+                    valuable asset to any tech team, and I highly
+                    recommend him.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
@@ -539,7 +527,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>I'm always open to discussing new projects, collaborations, or just chatting about tech and ideas. Whether
+          you have a question, opportunity, or just want to say hi — feel free to reach out!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -604,7 +593,7 @@
                   <label for="message-field" class="pb-2">Message</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
-
+                <input type="hidden" name="_next" value="https://ajithes1.github.io/portfolio">
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
