--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 content">
+          </div> -->
+          <div class="col-lg-12 content">
             <h2>UI/UX Designer &amp; Frontend Developer.</h2>
             <p class="fst-italic py-3">
               Known for my problem-solving abilities, attention to detail, and adaptability, I thrive in agile
@@ -512,6 +512,22 @@
               </div>
             </div><!-- End testimonial item -->
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>I had the pleasure of collaborating with Ajith on several RFPs and project discussions, and I
+                    can confidently say he was a tremendous asset to our team. Ajith is highly proficient in React.js
+                    and React Native, demonstrating a remarkable ability to quickly grasp project requirements and bring
+                    clarity and structure to our proposals.
+                  </span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <h3>Ammu George Samuel</h3>
+                <h4>Senior Project Manager</h4>
+              </div>
+            </div><!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
