--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <!-- <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
-          </div> -->
-          <div class="col-lg-12 content">
+          <div class="col-lg-4">
+            <img src="assets/img/my-profile-img.jpg" class="img-fluid br-15" alt="">
+          </div>
+          <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Frontend Developer.</h2>
             <p class="fst-italic py-3">
               Known for my problem-solving abilities, attention to detail, and adaptability, I thrive in agile
