--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body class="index-page">
@@ -616,6 +617,7 @@
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
                   <button type="submit">Send Message</button>
+                  <div class="g-recaptcha" data-sitekey="6LeUWyErAAAAAN6HIHZypclO2oOunsLzazIF3jOD"></div>
                 </div>
 
               </div>
