--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body class="index-page">
@@ -590,7 +589,6 @@
             <form action="https://formsubmit.co/ajithes1@gmail.com" method="POST" class="php-email-form"
               data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
-
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Your Name</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
@@ -611,13 +609,12 @@
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
                 <input type="hidden" name="_next" value="https://ajithes1.github.io/portfolio">
+                <input type="hidden" name="_captcha" value="true">
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-
                   <button type="submit">Send Message</button>
-                  <div class="g-recaptcha" data-sitekey="6LeUWyErAAAAAN6HIHZypclO2oOunsLzazIF3jOD"></div>
                 </div>
 
               </div>
