--- a/index.html
+++ b/index.html
@@ -586,8 +586,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formsubmit.co/ajithes1@gmail.com" method="POST" class="php-email-form"
-              data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/xgvkeyld" method="POST">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Your Name</label>
@@ -608,8 +607,6 @@
                   <label for="message-field" class="pb-2">Message</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
-                <input type="hidden" name="_next" value="https://ajithes1.github.io/portfolio">
-                <input type="hidden" name="_captcha" value="true">
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
