--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formspree.io/f/xgvkeyld" method="POST">
+            <form id="contact-form" method="POST">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Your Name</label>
@@ -607,13 +607,11 @@
                   <label for="message-field" class="pb-2">Message</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
+                <input type="hidden" name="_captcha" value="true">
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
                   <button type="submit">Send Message</button>
                 </div>
-
+                <div id="form-message" style="margin-top: 1rem;"></div>
               </div>
             </form>
           </div><!-- End Contact Form -->
@@ -647,6 +645,35 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    const form = document.getElementById("contact-form");
+    const messageDiv = document.getElementById("form-message");
+
+    form.addEventListener("submit", function (e) {
+      e.preventDefault(); // prevent page reload
+
+      const formData = new FormData(form);
+
+      fetch("https://formsubmit.co/ajax/ajithes1@gmail.com", {
+        method: "POST",
+        headers: { 'Accept': 'application/json' },
+        body: formData
+      })
+        .then(response => {
+          if (response.ok) {
+            messageDiv.innerHTML = "<span style='color: green;'>✅ Message sent successfully!</span>";
+            form.reset();
+          } else {
+            return response.json().then(data => {
+              messageDiv.innerHTML = `<span style='color: red;'>❌ ${data.message || 'Something went wrong.'}</span>`;
+            });
+          }
+        })
+        .catch(error => {
+          messageDiv.innerHTML = `<span style='color: red;'>❌ Error: ${error.message}</span>`;
+        });
+    });
+  </script>
 
 </body>
 
