--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="#testimonials"><i class="bi bi-pencil-square navicon"></i> Testimonials</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -499,6 +500,23 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
+                  <span>I had the pleasure of working with Ajith on the Smart Digital Assets program for our major oil
+                    client, where he delivered outstanding work on the web and mobile apps using React.js and
+                    ReactNative.js. His ability to integrate external libraries and enhance the overall experience was
+                    very impressive. Ajith is a great team player, reliable, and solution-oriented.
+                  </span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <h3>Rahim Badsha</h3>
+                <h4>Technical Project Manager</h4>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
                   <span>I had the pleasure of working with Ajith, a highly capable and versatile developer with solid
                     expertise in both web and mobile app development. He consistently delivered high-quality solutions,
                     whether building responsive web interfaces or crafting smooth mobile experiences. Ajith is a
@@ -528,7 +546,6 @@
                 <h4>Senior Project Manager</h4>
               </div>
             </div><!-- End testimonial item -->
-
           </div>
           <div class="swiper-pagination"></div>
         </div>
